# Hei-DataHub

./: .datahub_config.json  .env  .env-version  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DIAGRAM_v0.40.md  AUTOCOMPLETE_USAGE_GUIDE.md  BRANCH_DIVERGENCE_EXPLANATION.md  BUGFIX_ADD_DATASET.md  BUGFIX_AUTO_PULL_MANAGER.md  BUGFIX_AUTO_STASH.md  BUGFIX_GIT_CHECKOUT.md  BUGFIX_MIGRATION_ERRORS.md  BUGFIX_TUPLE_UNPACKING.md  CHANGELOG.md  CHANGELOG_v0.50.md  CHECKLIST_v0.40.md  CHECKLIST_v0.50_COMPLETE.md  CLEANUP_VERIFICATION_v0.55.md  CLI_COMMAND_UPDATE.md  CLOUD_FILTERING_FIX.md  CLOUD_ONLY_UPDATE.md  CNAME  COMMAND_SETUP.md  COMPLETE_v0.50.md  COMPLETION_SUMMARY_v0.58.1-beta.md  CONTRIBUTING.md  CORRECT_INSTALL_GUIDE_v0.58.md  CRITICAL_FIXES_v0.58.md  DATA_PATHS_FIX_v0.58.md  DELIVERABLES.md  DELIVERABLE_SUMMARY.md  DELIVERY_v0.50.md  DESKTOP_INTEGRATION.md  DESKTOP_INTEGRATION_SUMMARY.md  DEV_DOCS_SUMMARY.md  DOCS_GUIDE.md  DOCS_IMPLEMENTATION_SUMMARY.md  ENHANCED_PULL_SYSTEM.md  ENHANCEMENT_SUITE_SUMMARY.md  (+77 more)
.github/: CI_CD_OVERVIEW.md  PULL_REQUEST_TEMPLATE_v0.58.md
.github/workflows/: aur-publish.yml  build-binary.yml  build-windows.yml  ci.yaml  ci.yml  deploy-docs.yml  dev-doc-branch.yml  dev-docs.yml  linux-build.yml  macos-build.yml  pages.yml  static.yml  version-sync.yml  windows-build.yml
DEV/: README.md
DEV/0.60-beta/: AUTH_MIGRATION_GUIDE.md  LOGS.md  RELEASE_NOTES_DRAFT.md
DEV/0.61-beta/: LOGS.md
DEV/0.62-beta/: LOGS.md
DEV/0.64-beta/: LOGS.md
assets/linux/: hei-datahub.desktop
data/asdfasdf-1/: metadata.yaml
data/burned-area/: metadata.yaml
data/example-weather/: metadata.yaml
data/final-test/: metadata.yaml
data/land-cover/: metadata.yaml
data/new-weather/: metadata.yaml
data/precipitation/: metadata.yaml
data/rainfalls/: metadata.yaml
data/test/: metadata.yaml
data/test-data/: metadata.yaml
data/test-v2/: metadata.yaml
data/testing-another-one/: metadata.yaml
data/testing-the-beta-version/: metadata.yaml
data/weather/: weather.yaml
data/weather-q1/: metadata.yaml
data/weather-q2/: metadata.yaml
dev-docs/: ABOUT.md  CHANGELOG.md  changelog.md  index.md  known-issues.md  requirements.txt  v0.60-UPGRADE-SUMMARY.md  versioning.md
dev-docs/adr/: 001-docs-split.md  002-branching-strategy.md  003-changelog-enforcement.md  004-docs-upgrade-and-cleanup.md  index.md
dev-docs/api-reference/: cli-commands.md  overview.md
dev-docs/appendices/: glossary.md
dev-docs/architecture/: auth-and-sync.md  auth-developer-notes.md  data-flow.md  design-principles.md  diagrams.md  module-map.md  overview.md  search-and-autocomplete.md  security-privacy.md
dev-docs/assets/: dev-overrides.css  repo_url.js  site-switcher.js  vim-navigation-dev.js
dev-docs/codebase/: cli-module.md  core-module.md  infra-module.md  module-walkthrough.md  overview.md  package-structure.md  root-files.md  services-module.md  tests.md  ui-module.md  utils-module.md
dev-docs/config/: adding-config.md  environment.md  files.md  overview.md
dev-docs/contributing/: code-review.md  commits.md  definition-of-done.md  workflow.md
dev-docs/data/: adding-datasets.md  indexing.md  migrations.md  overview.md  schema.md  storage.md
dev-docs/learn/: 00-overview.md  01-architecture.md  01-what-is-hei-datahub.md  02-setup.md  README.md
dev-docs/maintenance/: coverage-tracker.md  health-checklist.md
dev-docs/overview/: audience.md  compatibility.md  contributing-docs.md  introduction.md
dev-docs/performance/: hotspots.md  optimization.md  overview.md  profiling.md
dev-docs/quickstart/: common-tasks.md  development-setup.md  first-contribution.md  getting-started.md
dev-docs/ui/: adding-views.md  architecture.md  keybindings.md  state.md  theming.md  views.md  widgets.md
docs/: 00-welcome.md  01-getting-started.md  02-navigation.md  03-the-basics.md  10-ui.md  11-data-and-sql.md  12-config.md  90-faq.md  98-versioning.md  99-changelog.md  RENOVATION_NOTES_057.md  customization.md  index.md  privacy-and-security.md  releasing.md  requirements.txt  troubleshooting.md
docs/20-tutorials/: 01-installation.md  02-first-dataset.md  03-search-and-filters.md
docs/_includes/: version.md
docs/assets/: README.md  overrides.css  vim-navigation.js
docs/getting-started/: 00-welcome.md  01-getting-started.md  02-navigation.md  03-the-basics.md
docs/help/: 90-faq.md  troubleshooting.md
docs/how-to/: 02-first-dataset.md  04-settings.md  05-first-dataset.md  06-edit-datasets.md  07-search-advanced.md  08-customize-keybindings.md  08-search-autocomplete.md  09-change-theme.md  add-dataset-to-cloud.md  change-theme.md  customize-badge-styles.md  settings.md  (+3 more)
mini_datahub/: __init__.py  auto_pull.py  autocomplete.py  cli.py  config.py  debug_console.py  git_ops.py  github_integration.py  index.py  logging_setup.py  outbox.py  pr_workflow.py  screens.py  state_manager.py  storage.py  tui.py  tui_old.py  update_checker.py  utils.py  version.py
scripts/: README_WINDOWS_UPDATE.md  VERSION_MANAGEMENT.md  build_desktop_binary.sh  build_linux.sh  build_linux_package.sh  build_macos.sh  build_windows.ps1  build_windows_exe.ps1  check_heibox_state.py  check_index.py  check_version_consistency.py  create_desktop_entry.sh  debug_bug_10.py  diagnose_cloud_upload.py  fix_uv_commands.sh  generate_icon.py  list_heibox_folders.py  project_overview.sh  quick_test.sh  rebuild_index.py  setup_dev.sh  setup_pr_workflow.sh  setup_webdav.sh  show_config.py  sync_version.py  test_bug_10_interactive.py  test_desktop_integration.py  test_version.py  uninstall.sh  update_homebrew_formula.py  validate_cloud_only.py  validate_v0.58_implementation.sh  verify_bug10_fix.py  verify_cross_platform_data_fix.py  verify_installation.sh  windows_installer.iss  windows_update.bat  windows_update_helper.ps1
tests/: test_basic.py  test_persistence_bug_7.py  test_search_tokenization_bug_10.py  test_ui_badges_bug_10.py
tools/: migrate_markdown_version_codename.py
tutorial-docs/: 00-overview.md  01-architecture.md  01-what-is-hei-datahub.md  02-setup.md  README.md  index.md  requirements.txt
(+261 files in other folders)
